# parametricSketcher

./: .gitignore  CMakeLists.txt  T_SWDP_SystemRequirements_v1.txt  main.cpp
ConstraintSolver/: CoincidentConstraint.h  Constraint.h  DistanceConstraint.h  HorizontalConstraint.h  Solver.cpp  Solver.h
GeometryEngine/: BezierCurve.h  Circle.h  Ellipse.h  GeometricEntity.h  GeometricEntityFactory.cpp  GeometricEntityFactory.h  Line.h  Point.h  RegularPolygon.h  Sketch.cpp  Sketch.h
Persistence/: DatabaseManager.cpp  DatabaseManager.h  PersistenceManager.cpp  PersistenceManager.h
Rendering/: Canvas.cpp  Canvas.h  CanvasState.h  CanvasStates.cpp  CanvasStates.h
UI/: LoginDialog.h  MainWindow.cpp  MainWindow.h
